# furlang

./: CMakeLists.txt  README.md
furas/: CMakeLists.txt  README.md
furas/example/: example.furas
furas/include/furas/: codegen.h  lexer.h
furas/src/: codegen.c  lexer.c  main.c
furc/: CMakeLists.txt  README.md
furc/example/: fib.fur
furc/include/furc/: furc.h  utils.h
furc/include/furc/backend/: ast.h  lexer.h  parser.h
furc/src/: main.c  utils.c
furc/src/backend/: lexer.c  parser.c
furlang/: CMakeLists.txt  README.md
furlang/include/furlang/: bytecode.h  context.h  executor.h  furlang.h  id.h  module.h  thing.h
furlang/include/furlang/alloc/: allocator.h  arena.h
furlang/include/furlang/utils/: da.h  file.h  sparseSet.h
furlang/src/: bytecode.c  context.c  context.h  executor.c  executor.h  module.c  module.h  ops.c  thing.c  thing.h
furlang/src/alloc/: allocator.c  arena.c
furlang/src/utils/: file.c
runtime/: CMakeLists.txt  main.c
